mutationWebhook/kubernetes-mutating-webhook/kubernetes_files/mutate-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
webhooks:
  - name: mutating-webhook.default.svc
    matchPolicy: Equivalent
    admissionReviewVersions: ["v1"]
    sideEffects: None
    rules:
      - operations: ["CREATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*/*"]
        scope: "*"
    failurePolicy: Ignore
    timeoutSeconds: 20
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ3ekNDQXRlZ0F3SUJBZ0lVQVdPMFdISDVzb1h0SGxiUjJZcUlrY1VMaTVjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lURVpNQmNHQTFVRUF3d1FiWFYwWVhScGJtY3RkMlZpYUc5dmF6RUxNQWtHQTFVRUJoTUNUVXN4RWpBUQpCZ05WQkFnTUNVMWhZMlZrYjI1cFlURVBNQTBHQTFVRUJ3d0dVMnR2Y0dwbE1SSXdFQVlEVlFRS0RBbHJiV2wwClpYWnphMmt3SGhjTk1qSXhNREUyTVRBek1UVTVXaGNOTWpjeE1ERTFNVEF6TVRVNVdqQmhNUmt3RndZRFZRUUQKREJCdGRYUmhkR2x1WnkxM1pXSm9iMjlyTVFzd0NRWURWUVFHRXdKTlN6RVNNQkFHQTFVRUNBd0pUV0ZqWldSdgpibWxoTVE4d0RR [...]
      service:
        namespace: default
        name: mutating-webhook
        path: /mutate
        port: 5000
